First pass at the tech app

--- a/styleph.css
+++ b/styleph.css
@@ -133,6 +133,18 @@ input:checked + .slider:before
 {
   visibility: visible;
 }
+    
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 6px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  width: 100%;
+  border: 1px solid #04AA6D;
+} 
 
 button:disabled,
     button[disabled] {
@@ -147,18 +159,6 @@ button:disabled,
         border: 1px solid #04AA6D;
     }
     
-button {
-  background-color: #04AA6D;
-  color: white;
-  padding: 6px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  float: right;
-  width: 100%;
-  border: 1px solid #04AA6D;
-} 
-
 input[type=text], select, textarea {
   width: 100%;
   padding: 6px;
@@ -201,6 +201,18 @@ input[type=radio], select, textarea {
 
 input[type=button] {
   background-color: #04AA6D;
+  color: white;
+  padding: 6px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  width: 100%;
+  border: 1px solid #04AA6D;
+} 
+
+input[type=button][disabled] {
+  background-color: grey;
   color: white;
   padding: 6px 20px;
   border: none;
@@ -301,6 +313,12 @@ label {
 .col-5 {
   float: left;
   width: 5%;
+  margin-top: 6px;
+}
+
+.col-2 {
+  float: left;
+  width: 2%;
   margin-top: 6px;
 }
 
