--- a/styleph.css
+++ b/styleph.css
@@ -84,6 +84,7 @@ input:checked + .slider:before
 }
 .container-progress
 {
+  min-width: 0%;  
   padding:4px 16px;
   color:#fff;
   background-color:#4CAF50;
