--- a/styleph.css
+++ b/styleph.css
@@ -211,7 +211,31 @@ input[type=button] {
   border: 1px solid #04AA6D;
 } 
 
+input[type=file] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 6px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  width: 100%;
+  border: 1px solid #04AA6D;
+} 
+
 input[type=button][disabled] {
+  background-color: grey;
+  color: white;
+  padding: 6px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  width: 100%;
+  border: 1px solid #04AA6D;
+} 
+
+input[type=file][disabled] {
   background-color: grey;
   color: white;
   padding: 6px 20px;
